--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <main>
-    <h1>Vanilla JavaScript App</h1>
+    <script type="text/javascript" src="https://widgets.paper.li/javascripts/iframe.min.js"></script><script type="text/javascript">Paperli.PaperFrame.Show({domain: 'paper.li', pid: 'e255e671-bdb9-499e-9f94-163966f208f0', width: '100%', height: '100%' })</script>
   </main>
 </body>
 
