--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Cloud, Voice, Data and Digital Technology Solutions Helping businesses of all sizes to leverage information and technology for business advantage" />
+  <meta name="keywords" content="Cloud, Voice, Data and Digital Technology Solutions" />
   <link rel="stylesheet" href="styles.css">
   <title>The Cloud & Digital Technology Daily</title>
   
